--- a/map.html
+++ b/map.html
@@ -109,7 +109,8 @@
 
         // Function to fetch and parse CSV and return both API key and itemId
         function fetchProjectInfo(project) {
-          return fetch('api-keys.csv')
+          // Always cache-bust the CSV fetch
+          return fetch('api-keys.csv?_=' + Date.now())
             .then(response => {
               if (!response.ok) throw new Error('Could not load api-keys.csv');
               return response.text();
